# Neuro-Symbolic-AI-Implementation

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  simple_demo.py
.github/workflows/: ci.yml
configs/: default.yaml
src/: __init__.py  data.py  models.py  train.py  utils.py  viz.py
tests/: test_models.py
